[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refua-preclinical"
version = "0.6.0"
description = "GLP tox/pharmacology planning, in vivo scheduling, bioanalytical pipelines, and CMC workflows for Refua."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [{name = "JJ Ben-Joseph", email = "jj@tensorspace.ai"}]
keywords = [
  "refua",
  "preclinical",
  "tox",
  "pharmacology",
  "bioanalysis",
  "glp",
  "cmc",
  "formulation",
  "stability",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://agentcures.com/"
Repository = "https://github.com/agentcures/refua-preclinical"

[project.scripts]
refua-preclinical = "refua_preclinical.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
